tests/snapshots/file@variable@undefined_global.lox.snap
---
source: tests/common/mod.rs
description: "print notDefined;  // expect runtime error: Undefined variable 'notDefined'.\n"
input_file: crafting_interpreters_test_files/variable/undefined_global.lox
---
OUT: 

===
ERR: 
  × undefined variable `notDefined`
   ╭────
 1 │ print notDefined;  // expect runtime error: Undefined variable 'notDefined'.
   ·       ─────┬────
   ·            ╰── here
   ╰────
